# pdfjs-viewer-pyside6

./: LICENSE_NOTICE.md  MANIFEST.in  README.md  pyproject.toml
docs/: ADDITIONAL_FEATURES.md  STABILITY_GUIDE.md  VIEWER_OPTIONS.md
examples/: README.md  basic_viewer.py  debug_viewer.py  disable_stamp_alttext.py  external_link_handler.py  feature_control.py  feature_selection.py  generic_document_viewer.py  print_handlers.py  stability_demo.py  test_alttext_dialog_crash.py  ultra_stability_example.py  unsaved_changes_demo.py  viewer_options.py
src/: _pdfjs_viewer_pyinstaller.py
src/pdfjs_viewer/: __init__.py  __main__.py  __pyinstaller.py  annotation_tracker.py  backend_inprocess.py  bridge.py  config.py  print_manager.py  print_translations.py  print_utils.py  resources.py  security.py  stability.py  ui_translations.py  unsaved_changes_dialog.py  viewer_backend.py  widget.py
src/pdfjs_viewer/pdfjs/: README.md
src/pdfjs_viewer/print_process/: __init__.py  __main__.py  main.py
src/pdfjs_viewer/pyinstaller_hooks/: hook-pdfjs_viewer.py
src/pdfjs_viewer/templates/: bridge.js  context_menu.js  feature_control.js  interceptor.js
